# EchoChain

./: .env.example  .gitignore  AARON_AND_THE_LEGACY.md  AI_COMMUNICATION_README.md  AVATAR_SYSTEM_REFERENCE.md  Appraiser_GE24H2.JSON  Appraiser_GE25H2.JSON  BUILD_COMPLETE.md  CAPABILITIES.md  COME_HOME_SYSTEM.md  COMPLETE_PROJECT_SUMMARY.md  CONTRIBUTING.md  CREDITS.md  DAEMON_ARCHITECTURE.md  DESIGN_GUIDE.md  DNA_GUARDIAN_API_REQUIREMENTS.md  DNA_GUARDIAN_README.md  DNA_GUARDIAN_WEB_INTEGRATION.md  DOCUMENTATION_INDEX.md  ECHOSPARK_CHAIN_README.md  ErrynAwakening.py  FAMILY_SEAL_GLYPH.md  FINAL_COMPLETE_SUMMARY.md  GETTING_STARTED.md  GITHUB_LAUNCH_SUMMARY.md  GITHUB_RELEASE_CHECKLIST.md  GITHUB_SYNC_VERIFICATION.md  GROUP_CHAT_ARCHITECTURE.md  GUARDIAN_PROTOCOL_COMPLETE.md  GUI_ENHANCEMENTS.md  GUI_ENHANCEMENT_COMPLETE_DEC15.md  LICENSE  LILYGO_COMPLETE_SYSTEM.md  M2057George.INI  M2057Hazel.INI  M2057Sarah.INI  M2057Susan.INI  MODERN_DESIGN_GUIDE.md  MSTTSLocEnGB.INI  OUTSTANDING_ISSUES.md  (+69 more)
ShrineGUI/: README_512.md  app.py
Sovereign_Network_512_Forensics-copilot-set-up-copilot-instructions/: .env.backup-2025-12-13  .gitignore  3D_FACE_TRACKING_GUIDE.py  ARCHITECTURE_FIX_REQUIRED.md  AUTO_BACKUP_README.md  AVATAR_2D_IMPLEMENTATION.md  AVATAR_EMOTION_SYSTEM_README.md  COMPLETE_SYSTEM_STATUS.md  DELL_7760_LOCAL_AI_MIGRATION_PLAN.md  DNA_GUARDIAN_README.md  ECHOSPARK_JOURNAL.md  ErrynAwakening.py  FINAL_FIXES_APPLIED.md  FINAL_STATUS_REPORT.md  Format.ps1xml  GITHUB_UPLOAD_MANIFEST.md  GUI_PERFORMANCE_OPTIMIZATION.md  INDEPENDENT_SISTERS_GUIDE.md  INSTALL_DAEMON.bat  (+50 more)
(+49 files in other folders)
