[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erryns-soul"
version = "0.1.0"
description = "Erryn's Soul GUI and AI mind"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Erryn" }
]
dependencies = [
  "python-dotenv",
  "openai>=1.0.0",
  "psutil",
  "azure-cognitiveservices-speech"
]

#[project.urls]
#Homepage = "https://example.com"
#Repository = "https://example.com/repo"

[tool.setuptools]
package-dir = {"" = "."}
packages = [
  "erryns_soul",
]
